--- a/app/assets/stylesheets/comment.scss
+++ b/app/assets/stylesheets/comment.scss
@@ -7,8 +7,10 @@
 }
 .commentArea {
   height: 250px;
+  margin-bottom: 1em;
 }
 .commentSumbit {
+  height: 3em;
 }
 
 #commentLogo {
@@ -38,10 +40,11 @@
 #commentForm {
   margin: 0 15px;
   row {
-    margin: 5px 15px;
+    margin: 0 15px;
   }
 }
 
 #commentCategory{
   height: 35px;
+  margin: 1em 0;
 }
