--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -18,6 +18,10 @@ body {
   width: 100%;
   height: 60px;
   background-color: #f5f5f5;
+  p {
+    text-align: center;
+    margin-top: 1em;
+  }
 }
 
 p, ol, ul, td {
