--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -26,7 +26,10 @@
   <form class="row" id="commentForm">
     <div class="row" >
       <select id="commentCategory" class="col-sm-4" placeholder="Select a Category">
-        <option>its an item</option>
+        <option>Science</option>
+        <option>English</option>
+        <option>History</option>
+        <option>Physical Education</option>
       </select>
     </div>
     <div class="row" >
