navbar links workings

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,8 @@
           </a>
         </div>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Form</a></li>
-          <li><a href="#">Admin</a></li>
+          <li><a href="/">Form</a></li>
+          <li><a href="/issues">Admin</a></li>
         </ul>
       </div>
     </nav>
