--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
         </div>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="/">Form</a></li>
+          <li><a href="/login">Login</a></li>
           <li><a href="/issues">Admin</a></li>
         </ul>
       </div>
