font sizes look good

--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -1,35 +1,5 @@
 <div class="main-container col-sm-10 col-sm-offset-1">
   <div class="row" id="commentHeader">
-    <h1 class="col-sm-12">Faculty Comment Form</h1>
+    <h1 class="col-sm-12">Log In Page</h1>
   </div>
-  <div class="row" id="commentInfo">
-    <div class="col-sm-7" id="commentText">
-      <h2> Instructions: </h2>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ultricies
-        sodales nibh quis efficitur. Aliquam erat volutpat. Mauris sem dolor, lobortis
-        sit amet tortor id, eleifend congue libero. Mauris non odio porttitor, posuere
-        neque non, iaculis massa. Duis et interdum sapien, et iaculis lectus. Maecenas
-        non efficitur libero.
-      </p>
-    </div>
-    <img class="col-sm-4 col-sm-offset-1" id="commentLogo" src="/jefferson-houston-logo.png"/>
-  </div>
-
-  <form class="row" id="commentForm">
-    <div class="row" >
-      <select id="commentCategory" class="col-sm-4" placeholder="Select a Category">
-        <option>Science</option>
-        <option>English</option>
-        <option>History</option>
-        <option>Physical Education</option>
-      </select>
-    </div>
-    <div class="row" >
-      <textarea class="col-sm-12 commentArea" placeholder="Please Comment Here"></textarea>
-    </div>
-    <div class="row" >
-      <button class="commentSumbit col-sm-2 col-sm-offset-10" type="submit">Submit</button>
-    </div>
-  </form>
 </div>
