--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,9 +17,9 @@
           </a>
         </div>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/">Form</a></li>
-          <li><a href="/login">Login</a></li>
-          <li><a href="/issues">Admin</a></li>
+          <li><a class="navLinks"  href="/">Form</a></li>
+          <li><a class="navLinks" href="/login">Login</a></li>
+          <li><a class="navLinks" href="/issues">Admin</a></li>
         </ul>
       </div>
     </nav>
@@ -27,7 +27,8 @@
     <%= yield %>
 
     <footer class="footer">
-      <p>Place sticky footer content here.</p>
+      <p>Brought to you by<br/>
+      Jefferson Teacher Action Committee</p>
     </footer>
   </body>
 </html>
