--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,3 +17,17 @@
 @import 'comment';
 @import 'issues';
 @import 'nav_footer';
+@import 'variables';
+
+
+.h1 {
+  font-size: $font-size-h1;
+  color: $maroon;
+  font-weight: bold;
+}
+
+.h2 {
+  font-size: $font-size-h2;
+  color: $gold;
+  font-weight: bold;
+}
