--- a/app/assets/stylesheets/nav_footer.scss
+++ b/app/assets/stylesheets/nav_footer.scss
@@ -1,5 +1,19 @@
 @import 'variables';
 
+.navbar {
+  background-color: $maroon;
+  a {
+    color: $gold !important;
+    &:hover {
+      color: white !important;
+    }
+
+    &:active {
+      color: darkgrey !important;
+    }
+  }
+}
+
 .navbar-brand {
   font-size: $font-size-navbarBrand;
 }
@@ -13,12 +27,13 @@
   bottom: 0;
   width: 100%;
   height: 70px;
-  background-color: #f5f5f5;
+  background-color: $maroon;
   p {
     text-align: center;
     line-height: 16px;
     padding-bottom: 0;
     margin: 1.5em 0 0 0;
     font-size: $font-size-footer;
+    color: $gold;
   }
 }
