--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,7 @@
 @import 'comment';
 @import 'issues';
 @import 'nav_footer';
+@import 'login';
 @import 'variables';
 
 
@@ -26,8 +27,32 @@
   font-weight: bold;
 }
 
-.h2 {
+.h2-gold {
   font-size: $font-size-h2;
   color: $gold;
   font-weight: bold;
+}
+
+.h2-maroon {
+  font-size: $font-size-h2;
+  color: $maroon;
+  font-weight: bold;
+}
+
+.sumbitButton {
+  height: 3em;
+  width: 10.5em;
+  border-radius: 1em;
+  background-color: $gold;
+  border: none;
+  color: $maroon;
+  font-weight: bold;
+  &:hover {
+    color: white;
+    background-color: darkgrey;
+  }
+  &:active {
+    color: $gold;
+    background-color: $maroon;
+  }
 }
