--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -4,7 +4,7 @@
   </div>
   <div class="row" id="commentInfo">
     <div class="col-sm-7" id="commentText">
-      <h2 class="h2"> Instructions: </h2>
+      <h2 class="h2-gold"> Instructions: </h2>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ultricies
         sodales nibh quis efficitur. Aliquam erat volutpat. Mauris sem dolor, lobortis
@@ -33,10 +33,10 @@
       </select>
     </div>
     <div class="row" >
-      <textarea class="col-sm-12 commentArea" placeholder="Please Comment Here"></textarea>
+      <textarea class="col-sm-12 commentArea" placeholder="Please Comment Here..."></textarea>
     </div>
     <div class="row" >
-      <button class="commentSumbit col-sm-2 col-sm-offset-10" type="submit">SUBMIT</button>
+      <button class="sumbitButton col-sm-2 col-sm-offset-10" type="submit">SUBMIT</button>
     </div>
   </form>
 </div>
