--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -1,5 +1,23 @@
 <div class="main-container col-sm-10 col-sm-offset-1">
-  <div class="row" id="commentHeader">
-    <h1 class="col-sm-12">Log In Page</h1>
+  <div class="panel panel-default">
+    <div class="panel-body">
+      <div class="row">
+        <h1 class="col-sm-12 h2-maroon">Log In Page</h1>
+      </div>
+      <div class="row">
+        <form id="loginForm">
+          <div class="form-group col-sm-10 col-sm-offset-1">
+            <label for="exampleInputEmail1">User Name</label>
+            <input type="email" class="form-control" id="userName" placeholder="user@email.com">
+          </div>
+          <div class="form-group col-sm-10 col-sm-offset-1">
+            <label for="exampleInputPassword1">Password</label>
+            <input type="password" class="form-control" id="password" placeholder="p@s$w0rd">
+          </div>
+          <button type="submit" class="btn btn-default sumbitButton col-sm-1 col-sm-offset-9">SUBMIT</button>
+        </form>
+      </div>
+
+    </div>
   </div>
 </div>
