login dialog centered, button hover works, button aligned right

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,6 +47,7 @@
   border: none;
   color: $maroon;
   font-weight: bold;
+  float: right;
   &:hover {
     color: white;
     background-color: darkgrey;
