--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -36,7 +36,7 @@
       <textarea class="col-sm-12 commentArea" placeholder="Please Comment Here..."></textarea>
     </div>
     <div class="row" >
-      <button class="sumbitButton col-sm-2 col-sm-offset-10" type="submit">SUBMIT</button>
+      <button class="sumbitButton" type="submit">SUBMIT</button>
     </div>
   </form>
 </div>
