--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -10,4 +10,4 @@ $font-size-footer: 0.875em;        //14px
 $font-size-paragraph: 1.0em;       //16px
 
 $font-size-h1: 2.75em;             //44px
-$font-size-h2: 2.0em;
+$font-size-h2: 2.0em;              //32px
