--- a/app/views/confirmation/index.html.erb
+++ b/app/views/confirmation/index.html.erb
@@ -1,8 +1,8 @@
-<div id="login-container" >
+<div id="container" >
   <div class="panel panel-default">
     <div class="panel-body">
       <div class="row">
-        <h1 class="col-sm-12 h2-maroon">Log In Page</h1>
+        <h1 class="col-sm-12 h2-maroon">Not Log In Page</h1>
       </div>
       <div class="row">
         <form id="loginForm">
